Adds docker compose and controller